--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-rate-limit": "^7.3.1",
     "express-rate-limiter": "^1.3.1",
     "http-proxy-middleware": "^3.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pm2": "^5.4.1"
   }
 }
